Update README.md and Project File Structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
+
+# ignore vagrant config folder
 .vagrant/
+
+# ignore server key and certifacte files
+ssl/certs/server-cert.pem
+ssl/private/server-key.pem
